# fermian.github.io

./: build.bat  index.html
blog/1/: 1.md  index.html
generator/: Cargo.toml
generator/src/: main.rs
pages/: index.html
style/: main.css
templates/: blog.html  footer.html  header.html
