[package]
name = "generator"
version = "0.1.0"
authors = ["fermian <78496870+fermian@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1.7.0", features = ["builtins"] }
minify = "1.2.0"
glob = "0.3.0"
pulldown-cmark = "0.8.0"
serde = { version =  "1.0.125", features = ["derive"] }